--- a/src/Pages/LoginEmail/LoginEmail.css
+++ b/src/Pages/LoginEmail/LoginEmail.css
@@ -36,7 +36,7 @@
     padding: 5%;
 }
 
-.row input {
+.row1 input {
     border: 1px solid rgba(135, 135, 135, 0.5);
     border-radius: 4px;
     background-color: #0D1117;
