--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,174 +1,95 @@
-.ContainerHome {
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    background-color: #010409;
+.home-container {
+	min-height: 100vh;
+	display: flex;
+	background-color: #010409;
 }
 
-.split {
-    width: 100vw;
-    height: 100vh;
-
-    display: flex;
-    flex-direction: row;
+.home-sidebar {
+	display: flex;
+	flex-direction: column;
+	width: 360px;
+	padding: 16px;
 }
 
-.home-1 {
-    width: 30%;
-    height: 100%;
-    width: 20%;
-    background-color: #010409;
-
+.home-profile {
+	display: flex;
+	background-color: #0d1117;
+	align-items: center;
+	padding: 8px 16px;
+	border-radius: 16px;
 }
 
-.col1 {
-    background-color: #010409;
-    width: 100%;
-    height: 15%;
-    margin-top: 22.5px;
+.home-profile .profile-image-container {
+	display: flex;
+	margin-right: 16px;
 }
 
-.col11 {
-    background-color: #0D1117;
-    width: 90%;
-    height: 80%;
-    border-radius: 10px;
-
-    display: flex;
+.home-profile .profile-image-container img {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	object-fit: cover;
 }
 
-.col111 {
-    width: 35%;
-    height: 100%;
-    /* background-color: red; */
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.profile-desc-container {
+	width: 180px;
 }
 
-.col111-img {
-    width: 65.5%;
-    height: 67.5%;
-    background-color: white;
-    border-radius: 100%;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    overflow: hidden;
+.profile-desc-container button {
+	background-color: #21262d;
+	border: 1px solid #424242;
+	color: white;
+	text-decoration: none;
+	width: 82px;
+	height: 32px;
+	font-size: 14px;
+	border-radius: 6px;
 }
 
-.col112 {
-    width: 65%;
-    height: 100%;
-
-    padding: 1.75%;
-    /* background-color: blue; */
+.profile-desc-container button:not(:last-child) {
+	margin-right: 12px;
 }
 
-
-.col2 {
-    background-color: #010409;
-    width: 100%;
-    height: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.find-quiz-container,
+.make-quiz-container {
+	display: flex;
+	flex-direction: column;
+	padding: 16px;
+	background-color: #0d1117;
+	border-radius: 16px;
+	margin: 16px 0;
 }
 
-
-.col22 {
-    background-color: #0D1117;
-    width: 90%;
-    height: 90%;
-    border-radius: 10px;
-    font-size: 30px;
-    display: flex;
-    flex-direction: column;
-    padding: 3%;
-
-    overflow: hidden;
+.find-quiz-container input {
+	outline: none;
+	border: 1.5px solid #585e65;
+	border-radius: 5px;
+	background-color: inherit;
+	color: #c9d1d9;
+	height: 50px;
+	padding: 0 16px;
+	/* margin: 8px 0 16px; */
 }
 
-
-.col22 input {
-    font-size: 17.5px;
-    border: 1px solid #585E65;
-    border-radius: 5px;
-    background-color: #0D1117;
-    color: #FFF;
-    height: 50px;
-    padding: 2.5%;
+.find-quiz-container input::placeholder {
+	color: rgba(201, 209, 217, 0.4);
 }
 
-.col22 button {
-    font-size: 18.5px;
-    margin-top: 20px;
-    background-color: #238636;
-    border-radius: 5px;
-    height: 35px;
+.find-quiz-container button,
+.make-quiz-container button {
+	background-color: #238636;
+	color: #c9d1d9;
+	border-radius: 6px;
+	font-size: 17px;
+	padding: 6px 0;
+	margin-top: 8px;
 }
 
-.col3 {
-    background-color: #010409;
-    width: 100%;
-    height: 15%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.home-content {
+	flex: 1;
+	padding: 16px;
 }
 
-
-.col33 {
-    background-color: #0D1117;
-    width: 90%;
-    height: 80%;
-    border-radius: 10px;
-    font-size: 25.5px;
-    display: flex;
-    flex-direction: column;
-    padding: 3%;
-}
-
-.col33 button {
-    font-size: 20px;
-    background-color: #238636;
-    border-radius: 5px;
-}
-
-.home-2 {
-    height: 100%;
-    width: 80%;
-    background-color: #010409;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
-@media screen and (max-width: 1435px) {
-    .home-1 {
-        display: none;
-    }
-
-    .home-2 {
-        width: 100%;
-    }
-}
-
-@media screen and (max-width:1615px) {
-    .col112 button {
-        width: 85px;
-        font-size: 11px;
-    }
-
-    a {
-        width: 80px;
-        font-size: 11px;
-    }
-
+.quiz-list-container {
+	display: flex;
 }
