Fixed edit profile styling page

--- a/src/Components/Navbar1/Navbar.css
+++ b/src/Components/Navbar1/Navbar.css
@@ -1,5 +1,5 @@
-button {
-    border: none;
-    background-color: #161B22;
-    color: white;
+.navbar button {
+	border: none;
+	background-color: #161b22;
+	color: white;
 }
