--- a/src/Pages/EditUserProfile/EditUserProfile.css
+++ b/src/Pages/EditUserProfile/EditUserProfile.css
@@ -29,13 +29,14 @@
 	border-radius: 6px;
 }
 
-.user-profile-container input[type='checkbox'] {
+.form-check input[type='checkbox'] {
 	background-color: #c9d1d9;
 	border: none;
 	cursor: pointer;
+	outline: none;
 }
 
-.user-profile-container input[type='checkbox']:checked {
+.form-check input[type='checkbox']:checked {
 	background-color: #238636;
 }
 
