--- a/src/index.css
+++ b/src/index.css
@@ -2,19 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+	font-family: CSChatThaiUI;
+	src: url('../public/CSChatThaiUI-Light.otf'), we;
+}
+
+@font-face {
+	font-family: "CSChatThaiUI";
+	src: url('../public/CSChatThaiUI-Light.otf') format("truetype");
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "CSChatThaiUI";
+	src: url('../public/CSChatThaiUI-Bold.otf') format("truetype");
+	font-weight: bold;
+	font-style: normal;
+}
+
+
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-		'Droid Sans', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
-
 * {
+	font-family: "CSChatThaiUI";
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
