--- a/src/App.css
+++ b/src/App.css
@@ -141,3 +141,21 @@
 	background: var(--web-background-color);
 	text-overflow: ellipsis; 
 }
+
+.not__hide__correct_answer, .hide__correct_answer {
+	line-height: 30px;
+	margin-top: 10px;
+}
+
+.timer__show__correct_answer, .timer__not__show__correct_answer {
+	color: var(--font-color);
+	background: var(--normal-button-color);
+	border-radius: 6px;
+	padding: 5px;
+}
+
+
+.timer__not__show__correct_answer {
+	color: white;
+	background: var(--error-color);
+}
