--- a/src/Pages/Welcome/Welcome.css
+++ b/src/Pages/Welcome/Welcome.css
@@ -1,15 +1,24 @@
-.ContainerWelcome {
+.welcome__container {
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     margin: 0;
     padding: 0;
-    background-color: #010409;
-
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-
-.Text {
-    font-size: 7vw;
+.title__container .logo {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 2vw;
+    width: 7vw;
+}
+.title__container .title {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 6vw;
+}
+.description {
+    width: 70vw;
 }
