--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -1,92 +1,144 @@
-.ContainerRegister {
+.modal-content {
+	font-family: Poppins, Arial, Helvetica, sans-serif;
+    background-color: var(--web-background-color);
+    color: white;
+    border: none;
+        
+}
+
+.register__container {
     width: 100vw;
     height: 100vh;
     margin: 0;
     padding: 0;
-    background-color: #010409;
+    -webkit-animation: flip-2-hor-top-1 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+    animation: flip-2-hor-top-1 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
 
+.register__info {
+    display: flex;
+    align-items: center;
+    margin-left: 30px;
+    margin-top: 20px;
+    margin-bottom: 30vh;
+}
+
+.register__info svg {
+    width: 104px;
+    height: 104px;
+    margin-right: 15px;
+}
+
+.register__info__row {
+    display: flex;
+    flex-direction: column;
+}
+
+.register__title {
+    font-size: 4vh;
+}
+
+.register__description {
+    font-size: 2.2vh;
+    color: var(--alpha-color);
+}
+
+.email__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15vh;
+}
+
+.email__field {
+    margin: 0;
+    margin-bottom: 25px;
+}
+
+.email__field p {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 0;
+}
+
+.register__container input {
+    margin-top: 0;
+    color: black;
+    background: var(--field-input-bg);
+    font-size: 16px;
+    border: 1px solid var(--field-input-border-color);
+    width: 425px;
+    border-radius: 5px;
+    padding-left: 8px;
+    padding-top: 7px;
+    padding-bottom: 6px;
+}
+
+.register__container button {
+    background: var(--button-active-color);
+    text-decoration: none;
+    color: white;
+    padding: 5px 0.7vw 5px 0.7vw;
+    border-radius: 5px;
+    width: 425px;
+    text-align: center;
+    font-size: 20px;
+    transition: .3s;
+    margin-bottom: 6.5vh;
+}
+
+.register__container button:hover {
+    opacity: 0.8;
+    transform: scale(1.03);
+}
+
+.register__container button:active {
+    opacity: 1;
+    transform: scale(0.98);
+}
+
+.register__container input[type="date"] {
+    padding: 19px;
+    font-size: 16px;
+    border: 1px solid var(--field-input-border-color);
+    outline: none;
+    border-radius: 5px;
+}
+
+.register__footer {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-top: 0;
+}
+
+
+.identity__form {
+    justify-content: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 50px;
+    row-gap: 25px;
+}
+
+.identity__container {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
-.content-1 {
-    width: 60vw;
-    height: 70vh;
-    background-color: #0D1117;
-    border-radius: 10px;
-}
-
-#btn2 {
-    display: none;
-}
-
-@media screen and (max-width: 425px) {
-    .content-1 {
-        width: 60vw;
-        height: 85vh;
-        background-color: #0D1117;
-        border-radius: 10px;
-    }
-
-    #section1-text1 {
-        font-size: 12.5px;
-    }
-
-    .section-1x input {
-        height: 24px;
-    }
-
-    #fontresp {
-        font-size: 12.5px;
-    }
-
-    #btn1 {
-        display: none;
-    }
-
-    #btn2 {
-        display: block;
-        position: absolute;
-        top: 97%;
-        width: 170px;
-        height: 25px;
-    }
-}
-
-.section-1x {
-    width: 100%;
-    height: 60%;
-    padding: 5%;
-}
-
-.row input {
-    border: 1px solid rgba(135, 135, 135, 0.5);
-    border-radius: 4px;
-    background-color: #0D1117;
-    margin-bottom: 20px;
-
-    color: white;
-}
-
-.section-1x button {
-    background-color: #238636;
-    color: white;
+.input__with__label {
+    margin: 0;
     padding: 0;
-    border: none;
-    border-radius: 5px;
-    height: 27.5px;
-    font-size: 15px;
+}
+.input__with__label p {
+    margin: 0;
+    font-weight: bold;
+    font-size: 1vw;
 }
 
-#eror {
-    font-size: 12.5px;
-}
-
-.modal-content {
-    background-color: #0D1117;
-}
-
-.btn-close {
-    background-color: 'white';
+.create__account__btn {
+    margin-top: 8vh;
 }
