--- a/src/Pages/EditUserProfile/EditUserProfile.css
+++ b/src/Pages/EditUserProfile/EditUserProfile.css
@@ -61,3 +61,185 @@
 .logout-button:hover {
 	color: rgba(201, 209, 217, 0.4);
 }
+
+
+
+
+
+.edit__profile__container {
+	align-items: center;
+	justify-content: center;
+	-webkit-animation: slide-right 1.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	animation: slide-right 1.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+
+}
+
+.page__header {
+	position: fixed;
+	display: flex;
+	align-items: center;
+	margin-top: 20px;
+	margin-left: 30px;
+}
+
+.page__svg {
+	margin-right: 15px;
+}
+
+.page__info p {
+	margin: 0;
+	padding: 0;
+}
+
+.page__info .page__title {
+	font-size: 40px;
+}
+
+.page__info .page__description {
+	font-size: 24px;
+	color: #c9d1d9;
+}
+
+
+
+.back__home__button {
+    position: fixed;
+    display: flex;
+    bottom: 10px;
+    text-align: center;
+    left: 30px;
+    transition: .3s;
+}
+.back__home__button:hover,
+.svg__with__button:hover,
+.save__button:hover {
+    transform: scale(1.05);
+    opacity: .7;
+}
+.back__home__button:active,
+.svg__with__button:active,
+.save__button:active {
+    transform: scale(0.95);
+    opacity: 1;
+}
+.back__home__button svg {
+    margin-right: 10px;
+    margin-top: 8px;
+}
+
+.back__home__button p {
+    font-size: 24px;
+}
+
+
+.settings__container {
+	display: flex;
+	flex-direction: column;
+	width: 100vw;
+	height: 100vh;
+	align-items: center;
+	justify-content: center;
+	padding-top: 50px;
+}
+
+.settings__identity__form {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 70px;
+}
+
+.settings__identity__form p {
+	margin: 0;
+	font-weight: bold;
+	font-size: 20px;
+}
+
+.settings__identity__form input {
+	color: black;
+	margin-top: 0;
+    background: var(--field-input-bg);
+    font-size: 16px;
+    border: 1px solid var(--field-input-border-color);
+    width: 425px;
+    border-radius: 5px;
+    padding-left: 8px;
+    padding-top: 7px;
+    padding-bottom: 6px;
+}
+
+.fullname__field {
+	margin-bottom: 13px;
+}
+
+
+.settings__security__form {
+	display: flex-start;
+	flex-direction: column;
+	justify-content: center;
+	width: 425px;
+	align-items: center;
+	margin-bottom: 30px;
+}
+
+.security__header {
+	display: flex;
+	justify-content: flex-start;
+	margin-bottom: 25px;
+	width: 425px;
+}
+
+.security__header p  {
+	margin: 0;
+	font-size: 35px;
+}
+
+.security__header svg {
+	width: 47px;
+	height: 48.76px;
+	margin-right: 10px;
+}
+
+.svg__with__button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-left: 30px;
+	margin-bottom: 13px;
+	transition: .26s;
+}
+
+
+.svg__icon {
+	width: 32px;
+	height: 32.82px;
+	margin-right: 8px;
+}
+
+.svg__icon svg {
+	width: 100%;
+	height: 100%;
+}
+
+.button__label {
+	font-size: 25px;
+}
+
+.button__action__contianer {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	margin-left: 58px;
+}
+
+.save__button {
+	width: 168px;
+	text-align: center;
+	border-radius: 5px;
+	cursor: pointer;
+	background: var(--active-button-color);
+	font-size: 24px;
+	margin-top: 24px;
+	transition: .25s;
+}
