--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -1,11 +1,3 @@
-.modal-content {
-	font-family: Poppins, Arial, Helvetica, sans-serif;
-    background-color: var(--web-background-color);
-    color: white;
-    border: none;
-        
-}
-
 .register__container {
     width: 100vw;
     height: 100vh;
@@ -19,7 +11,7 @@
     display: flex;
     align-items: center;
     margin-left: 30px;
-    margin-top: 20px;
+    padding-top: 20px;
     margin-bottom: 30vh;
 }
 
