--- a/src/App.css
+++ b/src/App.css
@@ -398,3 +398,16 @@
         transform: translate(-50%, -50%);
     }
 }
+
+
+@keyframes fade-in {
+	0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
