--- a/src/Components/ProfileImage/style.css
+++ b/src/Components/ProfileImage/style.css
@@ -7,19 +7,16 @@
 	margin-bottom: 48px;
 }
 
-.profile-image-container .image-container {
+.profile-image-container > .image-container {
 	width: 200px;
 	height: 200px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	border-radius: 50%;
+	overflow: hidden;
 }
 
-.profile-image-container .image-container img {
-	width: 100%;
-	height: 100%;
-	border-radius: 100%;
-}
 
 input[type='file'] {
 	display: none;
