--- a/src/components/profile-image/style.css
+++ b/src/components/profile-image/style.css
@@ -23,14 +23,14 @@ input[type='file'] {
 }
 
 .custom-file-upload {
-	width: 168px;
 	text-align: center;
 	border-radius: 5px;
 	cursor: pointer;
 	background: var(--active-button-color);
 	font-size: 24px;
-	margin-top: 24px;
+	margin-top: 16px;
 	transition: .25s;
+	padding: 1px 16px 1px 16px; 
 }
 
 
